// Produced by Acceleo JavaScript Generator 1.1.2
/* eslint-disable max-len, "DV6 TBC_CNES generated file" */
const applyOverride = require('../../../protobuf/utils/applyOverride');


module.exports = override => applyOverride({
  supportedCapabilities: 100,
  supportedLevels: 100,
  qoSproperties: 100,
  priorityLevels: 100,
  serviceURI: 'myURI',
  dataURI: 'myURI',
  dataName: 'mySTRING',
}, override);
